[tool.poetry]
name = "Mos Module"
version = "v0.0.0.1"
description = "Python module made by MosqitoTorpedo"
authors = ["MosqitoTorpedo"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"